--- a/index.html
+++ b/index.html
@@ -13,28 +13,34 @@
     <div class="container">
         <div id="event-container">
             <div class="row" id="row1">
-                <label class="mid" for="situation">Situation</label>
-                <label class="mid" for="healthyAdultOnSituation">Healthy Adult</label>
+                <label for="situation">Situation</label>
                 <br>
                 <textarea id="situation"></textarea>
+                <br>
+                <label for="healthyAdultOnSituation">Healthy Adult</label>
                 <textarea id="healthyAdultOnSituation" class="healthy"></textarea>
             </div>
             <div class="row" id="row2">
-                <label class="mid" for="punitiveAdult">Punitive Adult</label>
+                <label for="punitiveAdult">Punitive Adult</label>
                 <br>
                 <textarea id="punitiveAdult" class="unhealthy"></textarea>
+                <br>
+                <label for="healthyAdultOnPunitiveAdult">Healthy Adult</label>
+                <br>
                 <textarea id="healthyAdultOnPunitiveAdult" class="healthy"></textarea>
             </div>
             <div class="row" id="row3">
-                <label class="mid" for="vulnerableChild">Vulnerable Child</label>
+                <label for="vulnerableChild">Vulnerable Child</label>
                 <br>
                 <textarea id="vulnerableChild" class="child"></textarea>
+                <br>
+                <label for="healthyAdultOnVulnerableChild">Healthy Adult</label>
+                <br>
                 <textarea id="healthyAdultOnVulnerableChild" class="healthy"></textarea>
             </div>
             <div class="row" id="row4">
                 <label for="copingMechanism">Coping Mechanism</label>
                 <div class="row">
-
                     <select id="copingMechanismsSelect">
                         <option value="">-- None --</option>
                     </select>
@@ -42,6 +48,9 @@
                     <button id="copingMechanismOptionDelete">delete current mechanism</button>
                 </div>
                 <textarea id="copingMechanism" disabled class="unhealthy"></textarea>
+                <br>
+                <label for="healthyAdultOnCopingMechanism">Healthy Adult</label>
+                <br>
                 <textarea id="healthyAdultOnCopingMechanism" class="healthy"></textarea>
             </div>
         </div>
