--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- row 2 punitive -->
             <div class="row" id="row2" class="container container-fluid">
                 <div class="col">
-                    <label class="green-lbl" for="healthyAdultOnPunitiveAdultBox">Healthy Adult</label>
+                    <label class="green-lbl" for="healthyAdultOnPunitiveAdultBox">To Punitive</label>
                     <textarea id="healthyAdultOnPunitiveAdultBox" class="healthy" tabindex="8"></textarea>
                 </div>
                 <div class="col">
@@ -44,7 +44,7 @@
             <!-- row 3 vulnerable -->
             <div class="row" id="row3" class="container container-fluid">
                 <div class="col">
-                    <label class="green-lbl" for="healthyAdultOnVulnerableChildBox">Healthy Adult</label>
+                    <label class="green-lbl" for="healthyAdultOnVulnerableChildBox">To Vulnerable</label>
                     <textarea id="healthyAdultOnVulnerableChildBox" class="healthy" tabindex="9"></textarea>
                 </div>
                 <div class="col">
@@ -56,7 +56,7 @@
             <!-- row 4 mechanisms -->
             <div class="row" id="row4" class="container container-fluid">
                 <div class="col">
-                    <label class="green-lbl" for="healthyAdultOnCopingMechanismBox">Healthy Adult on Coping</label>
+                    <label class="green-lbl" for="healthyAdultOnCopingMechanismBox">To Coping</label>
                     <textarea id="healthyAdultOnCopingMechanismBox" class="healthy" disabled tabindex="10"></textarea>
                 </div>
                 <div class="col">
@@ -72,7 +72,7 @@
                     <img src="./assests/images/add.jpeg" alt="Add" style="object-fit: contain;max-width: 100%;max-height: 150px;">
                 </div> -->
                 <div class="col">
-                    <label class="red-lbl" for="punitiveAdultBox">Punitive Adult on Coping</label>
+                    <label class="red-lbl" for="punitiveAdultBox">To Coping</label>
                     <textarea id="punitiveAdultOnMechanismBox" class="punitive" disabled tabindex="6"></textarea>
                 </div>
 
